<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="24dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:text="@string/datum"
        android:textColor="#BCAAA4" />

    <EditText
        android:id="@+id/etDatum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helyszin"
        android:textColor="#BCAAA4" />

    <Spinner
        android:id="@+id/spHelyszin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:text="@string/eredmeny"
        android:textColor="#BCAAA4" />

    <EditText
        android:id="@+id/etEredmeny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/megjegyzes"
        android:textColor="#BCAAA4" />

    <EditText
        android:id="@+id/etMegjegyes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>